app/stylesheets/sass/partials/b-footer.sass
.b-footer
  &__container
    @extend .b-layout

  &__content
    @extend %grid

  &__nav
    @extend %grid__item
    @extend %palm--one-whole
    margin: 20px 0
    @include grid-media-query("palm")
      margin: 5px 0
    &_soc
      @extend %six-twelfths
      text-align: right
      @include grid-media-query("palm")
        text-align: left
      & > *
        display: inline
      .LocaleSwitcher
        margin-right: 15px
    &_main
      @extend %six-twelfths
    &_middle
      width: 0

  &__content-wrapper--with-middle
    .b-footer__nav_main
      @extend %three-eighths
    .b-footer__nav_middle
      @extend %two-eighths
      img
        max-width: 100%
    .b-footer__nav_soc
      @extend %three-eighths

  &__link
    font-size: 1.143em
    margin-right: 15px
    transition: color .2s ease
    &:last-child
      margin-right: 0
    @include grid-media-query("lap")
      font-size: 1em
      margin-right: 15px
    @include grid-media-query("palm")
      font-size: 1em
      margin-right: 10px

#made_in_kiiiosk
  font-size: 1.143rem

